--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="header12 cid-rBkh0tvFk1 mbr-fullscreen mbr-parallax-background" id="header12-g">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="header12 cid-rBkh0tvFk1 mbr-fullscreen mbr-parallax-background" id="header12-g">
 
     
 
@@ -125,7 +125,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="B4m4nir8fk/3OjTvgOpVquiZp0bJstaxDVSfnc+qq5QQo/rOMHEDGRKQYc2pE2z6NKrk6BSTRfeWeV6Jd4BzEdekf3SIo9+ccNayIx1+oczIT0vmGeLjJdFYZzv18shf">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TX42xZ3pln6KHixzjFpQb/gH/Jsoi8xDihVwJQ+GACpImo3s0abfKHQ+Sbjitl6JHZX9MyelunnDk7kMRmjKmTgZ3qOir1Zyrc8byJ8UnBOYqHhEKbsBeIrEwCkrIuau">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo contato, retornaremos em breve !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -175,7 +175,10 @@
             <div class="col-md-3 col-sm-4">
                 <p class="mb-4 mbr-fonts-style foot-title display-7"><strong>
                     MAPA DO SITE</strong></p>
-                <p class="mbr-text mbr-links-column mbr-fonts-style display-7"></p><p><a href="produtos.html"></a><a href="index.html">Home</a><br><a href="produtos.html">Produtos</a><br><a href="sobre.html">Sobre</a><br><a href="contato.html">Contato</a></p><p></p>
+                <p class="mbr-text mbr-links-column mbr-fonts-style display-7"><a href="index.html">Home </a>
+<br><a href="produtos.html">Produtos 
+</a><br><a href="sobre.html">Sobre </a>
+<br><a href="contato.html">Contato</a></p><p></p><p></p>
             </div>
             <div class="col-md-3 col-sm-4">
                 <p class="mb-4 mbr-fonts-style foot-title display-7"><strong>
@@ -191,7 +194,7 @@
 <br>CEP: 30865-330<br>031 3471-4157 | &nbsp;031 3382-5029<br>contato@thefixadores.com.br<br><br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="aCl317eMHNAUcEGIXr6JMhm+y4zhIqI+rFdtdv9J5D+9B7vHF0FvMvNPJ/z2S7QO/KA+C22iZFrBXxmJh/vG7yzfVwkcoVfQ9KB/rerCjpbA1287ibFbHVc+u61WgL2M">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nc29sbWOppr3L9WlbSHDiO/1QkzR+Bb5h/5mZQgu11OHx2M86hm/w+FqgYd2/ixs9gHgOW1OjK9nRhOeW/tzeg8PcPlBor8/YZ6XDY+IgaY0bb78Y3EpILJlrMETWGw3">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
