create github pages

--- a/arruelas.html
+++ b/arruelas.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="services1 cid-rBpODCKzoG" id="services1-1a">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="services1 cid-rBpODCKzoG" id="services1-1a">
     <!---->
     
     <!---->
@@ -191,7 +191,7 @@
 <br>CEP: 30865-330<br>TEL.: 031 3471-4157 | &nbsp;031 3382-5029<br><br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uuG/wLpJjvllynwEtKAtsCuGoLFYqA6TJRvVyhid+eLmr9W83M4uNJALFrFMZmLSXNPGZarDq2kgqzGsIE8EgWxsZbuxBV5I0PKdtKANv7WY9edlB0zNEbIbhJdY8y7G">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2GMerAXd6aEoUz+EP3OmBregIqHfi5o39vc2gyl5nKSjUV4R//RfdkmRKrfrPwmZxGawLZf+dD9ceWdw+LnItyXLS0HJsuFFq3vbYxPQ2eieRMPU/E/bVWqTFnS3izTa">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -212,7 +212,7 @@
     </div>
 </section>
 
-<section once="footers" class="cid-rBAgHVdfzk" id="footer6-1t">
+<section once="footers" class="cid-rBAQAq7OFv mbr-reveal" id="footer6-1o">
 
     
 
