--- a/contato.html
+++ b/contato.html
@@ -64,7 +64,7 @@ Contate-nos. Para receber mais informações, sanar dúvidas ou enviar sugestõe
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section contacts3 cid-rBpRJwPVgZ" id="contacts3-1i">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section contacts3 cid-rBpRJwPVgZ" id="contacts3-1i">
     <!---->
     
     <!---->
@@ -157,7 +157,7 @@ Contate-nos. Para receber mais informações, sanar dúvidas ou enviar sugestõe
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="abwUcxwMDOA3C4NTk1SveMUZwWlsm850Hl2fBOH+TgjQ7A7Dx6xKnwERTCiZGfX0yh15taG0twpQmpbh+F36/TosL3JOGIjeJw1stHr5W3TSKQ7n6EBLpLqQToJO+h6h">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Dk5mifyL0gOs3rSKRJzpS2O+rD5KmJ0ByNMGft9Ro+CNjOBBHJdhf9H9xdFpViY9J4Jq2cF40gGuwFUGZlQx4gf/73AcFudAtqdFs+B+V7VX/ibO/4GJsgbDr8CBG4Of">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo contato, retornaremos em breve !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -233,7 +233,7 @@ Contate-nos. Para receber mais informações, sanar dúvidas ou enviar sugestõe
 <br>CEP: 30865-330<br>031 3471-4157 | &nbsp;031 3382-5029<br>contato@thefixadores.com.br<br><br></p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="e89IKhIBEnXB1DOLxT0ZPZ8sLXpPthShUjyTNzNszV2Xzn6CRDKYLw31ydCMYmg/d2p9jvI6QYQ30O1pQFdMMe0Yof1N+lVNJSx6Z6VD4tnUJ2ULAczRAyb0CumXVv9r">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UEDUjla5YA4JM4TAcMp5bYn77AGCT/SsqckBk+FPjfV/GHjyM3TNfigCbpPfXdcI3ECNrGeKi34cXanxmL49jsqqUWiflrtV2M7zqrOd8eEPvUy/Ljz/+ef+dOSWXMDc">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -254,7 +254,7 @@ Contate-nos. Para receber mais informações, sanar dúvidas ou enviar sugestõe
     </div>
 </section>
 
-<section once="footers" class="cid-rBAgHVdfzk" id="footer6-1t">
+<section once="footers" class="cid-rBAQAq7OFv mbr-reveal" id="footer6-1o">
 
     
 
